# movie-search

./: .gitignore  README.md  app.py  pyproject.toml
api/: auth.py  handlers.py  main.py
api/models/: login_dto.py  movie_dtos.py
api/routers/: login_router.py  movie_router.py
api/utilities/: dynamo_operations.py  opensearch_operations.py  s3_operations.py
frontend/: package.json
frontend/src/: App.tsx  api.js  useAuth.js
frontend/src/components/: Layout.tsx  Login.tsx  Navbar.tsx  Registration.tsx  Search.tsx  Statistics.tsx  Upload.tsx
movie_search/: movie_search_stack.py
tests/unit/: test_movie_search_stack.py
