[tool.poetry]
name = "movie-search"
version = "0.1.0"
description = "Opensearch implementation"
authors = ["Mateja Cosovic <mateja.cosovic@energysage.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "api"

[tool.poetry.dependencies]
python = "^3.12"
mangum = "^0.17.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "4.0.1"
passlib = "^1.7.4"
opensearch-py = "^2.5.0"
fastapi = "^0.110.0"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.25.0"
uvicorn = "^0.27.1"
aws-cdk-lib = "^2.131.0"
black = "^24.3.0"
boto3 = "^1.34.71"

[tool.poe.tasks.bundle]
shell="""
poetry build && poetry run pip install --platform manylinux2014_aarch64 \
--only-binary=:all: -U --implementation cp -t package dist/*.whl && \
cd package ;  zip -qr ../artifact.zip . -x '*.pyc'
"""

[tool.black]
extend-exclude = "node_modules|cdk.out|package"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
